// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`advanced search 1`] = `
<input
  aria-label="Search input"
  className="pf-c-search-input__text-input"
  disabled={false}
  onChange={[Function]}
  onKeyDown={[Function]}
  value="username:player firstname:john"
/>
`;

exports[`advanced search with custom attributes 1`] = `
<input
  aria-label="Search input"
  className="pf-c-search-input__text-input"
  disabled={false}
  onChange={[Function]}
  onKeyDown={[Function]}
  value="username:player firstname:john"
/>
`;

exports[`navigable search results 1`] = `
<span
  className="pf-c-search-input__nav"
>
  <Button
    aria-label="Previous"
    isDisabled={false}
    onClick={[MockFunction]}
    variant="plain"
  >
    <ButtonBase
      aria-label="Previous"
      innerRef={null}
      isDisabled={false}
      onClick={[MockFunction]}
      variant="plain"
    >
      <button
        aria-disabled={false}
        aria-label="Previous"
        className="pf-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-10"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={false}
        onClick={[MockFunction]}
        role={null}
        type="button"
      >
        <AngleUpIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
            />
          </svg>
        </AngleUpIcon>
      </button>
    </ButtonBase>
  </Button>
  <Button
    aria-label="Next"
    isDisabled={false}
    onClick={[MockFunction]}
    variant="plain"
  >
    <ButtonBase
      aria-label="Next"
      innerRef={null}
      isDisabled={false}
      onClick={[MockFunction]}
      variant="plain"
    >
      <button
        aria-disabled={false}
        aria-label="Next"
        className="pf-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-11"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={false}
        onClick={[MockFunction]}
        role={null}
        type="button"
      >
        <AngleDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
            />
          </svg>
        </AngleDownIcon>
      </button>
    </ButtonBase>
  </Button>
</span>
`;

exports[`navigable search results 2`] = `
<span
  className="pf-c-badge pf-m-read"
>
  3 / 7
</span>
`;

exports[`result count 1`] = `
<span
  className="pf-c-badge pf-m-read"
>
  3
</span>
`;

exports[`search input with hint 1`] = `
Array [
  <input
    aria-hidden="true"
    className="pf-c-search-input__text-input pf-m-hint"
    disabled={true}
    type="text"
    value="test hint"
  />,
  <input
    aria-label="simple text input"
    className="pf-c-search-input__text-input"
    disabled={false}
    onChange={[Function]}
    onKeyDown={[Function]}
    value="test input"
  />,
]
`;

exports[`simple search input 1`] = `
<input
  aria-label="simple text input"
  className="pf-c-search-input__text-input"
  disabled={false}
  onChange={[Function]}
  onKeyDown={[Function]}
  value="test input"
/>
`;
